# helly-ai

./: .gitignore  README.md
ai/: .env.example  Makefile  README.md  package.json  pyproject.toml
ai/helly_ai/: main.py
ai/helly_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ai/helly_ai/api/: routers.py
ai/helly_ai/application/: container.py  resolution_service.py
ai/helly_ai/domain/: protocols.py  resolution.py
ai/helly_ai/infrastructure/embeddings/: sentence_transformer.py
ai/helly_ai/infrastructure/llm/: openrouter_client.py
ai/helly_ai/infrastructure/vectorstores/: chroma_store.py
ai/tests/: test_api.py  test_smoke.py  test_vector_integration.py
app/: README.md  build.gradle.kts  settings.gradle.kts
app/src/main/kotlin/helly/app/: Application.kt
app/src/main/kotlin/helly/app/api/: AskController.kt  FeedbackController.kt  TeamMemberController.kt
app/src/main/kotlin/helly/app/application/: Ports.kt  Services.kt
app/src/main/kotlin/helly/app/config/: AppConfig.kt
app/src/main/kotlin/helly/app/domain/: Models.kt
app/src/main/resources/: application-db.yml  application.yml
app/src/main/resources/db/migration/: V1__init.sql
app/src/test/kotlin/helly/app/: ApiEndpointsTest.kt  ApiIntegrationTest.kt  EndToEndFlowTest.kt  SmokeApiTest.kt
app/src/test/kotlin/helly/app/testsupport/: AppClient.kt  TestHttp.kt
docs/: agent.md  initial-prompt.md  product-vision.md
docs/openapi/: ai.yaml  app.yaml
product/: mvp.md
tools/devcli/: README.md  cli_core.py  devcli.py
(+3 files in other folders)
