[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helly-ai"
version = "0.0.1"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.4",
  "pytest>=7.0",
  "httpx>=0.27",
  "openai>=1.30.0",
  "chromadb>=0.5.3",
  "sentence-transformers>=2.7.0",
  "python-dotenv>=1.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]

